
8.40  2020-04-23

8.39  2020-04-22
  - Fixed a bug in Mojo::Server::Daemon where active connections could get the
    keep-alive timeout assigned instead of the inactivity timeout.
  - Fixed a race condition in Mojo::UserAgent where test servers would close
    connections prematurely.

8.38  2020-04-21
  - Added run_p method to Mojo::IOLoop::Subprocess. (batman)

8.37  2020-04-19
  - Added keep_alive_timeout attribute to Mojo::Server::Daemon.
  - Added -k options to daemon and prefork commands.
  - Added keep_alive_timeout setting to Hypnotoad.
  - Increased various default timeouts because keep_alive_timeout takes over
    some of their previous responsibility.
  - Improved timeout setting performance significantly in Mojo::IOLoop::Stream.
  - Improved again method in Mojo::Reactor, Mojo::Reactor::EV and
    Mojo::Reactor::Poll to allow changing the invocation time of active timers.
  - Fixed support for 425 status in Mojo::Message::Response.

8.36  2020-03-31
  - Added handler attribute to Test::Mojo.
  - Added test method to Test::Mojo.
  - Improved Test::Mojo to allow for extensions to be tested more easily.
  - Improved request_id attribute in Mojo::Message::Request to be a little more
    unique. (mst)

8.35  2020-03-20
  - Added not_empty filter to Mojolicious::Validator.

8.34  2020-03-16
  - Removed experimental status from proxy->get_p, proxy->post_p and
    proxy->start_p helpers in Mojolicious::Plugin::DefaultHelpers.
  - Removed experimental status from compress and min_compress_size attributes
    in Mojolicious::Renderer.
  - Removed experimental status from high_water_mark attribute in
    Mojo::IOLoop::Stream.
  - Removed experimental status from respond method in Mojolicious::Renderer.
  - Removed experimental status from bytes_waiting and can_write methods in
    Mojo::IOLoop::Stream.
  - Removed experimental status from dehop method in Mojo::Headers.
  - Removed experimental status from scope_guard function in Mojo::Util.